<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cont_ua"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pngwing" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="372dp"
        android:layout_height="266dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_text_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/foreign_cardsVisa_and_Mastercard_remotely"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/tv_pass_text"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/enter_your_authorization_number"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/b_text_login"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            tools:visibility="visible">


            <LinearLayout
                android:id="@+id/loginBordur"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/black_border"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/b_login_text"
                android:layout_width="0dp"

                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/loginBordur"
                app:layout_constraintStart_toStartOf="@+id/loginBordur"
                app:layout_constraintTop_toTopOf="@+id/loginBordur"
                app:layout_constraintVertical_bias="0.0">


                <EditText
                    android:id="@+id/tv_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@null"
                    android:gravity="center"
                    android:hint="login"
                    android:inputType="textMultiLine"
                    android:maxLength="30"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textSk"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.52" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--////////-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/b_text_pass"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_text_login">

            <LinearLayout
                android:id="@+id/linearPass1color"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/black_border"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linearPass1color"
                app:layout_constraintStart_toStartOf="@+id/linearPass1color"
                app:layout_constraintTop_toTopOf="@+id/linearPass1color"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/tv_pass_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="30"
                    android:text="__ __ __ __ __"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textSk"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.52" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--/////-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/b_contstraint_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray">

                <TextView
                    android:id="@+id/b_text_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/сontinue"
                    android:textColor="@color/middle_Gray_Blue"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_not_pass"
        android:layout_width="134dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/invalid_password"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>